# scgenerator

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO.md  config.npz  developement_help.md  func_rewrite.py  log  lol.txt  make_new_dispersion.py  play.py  pyproject.toml  requirements.txt  setup.cfg  test_ind.txt  tests.py
examples/: chang2011.py  ion_rate_plot.py  test_integrator.py
examples/Optica_PM2000D/: Optica_PM2000D.toml  PM2000D_A_eff_marcuse.npz  Pos30000New.npz  test_Optica_PM2000D.py
examples/Travers/: Travers.toml
formulas/: main.tex
scgenerator full anomalous/: initial_config.toml
scgenerator full anomalous/id 0 wavelength 8.35e-07 num 0/: params.toml
scgenerator full anomalous_1/id 0 wavelength 8.35e-07 num 0/: params.toml
src/scgenerator/: __init__.py  cache.py  const.py  defaults.py  env.py  errors.py  evaluator.py  helpers.py  initialize.py  io.py  legacy.py  logger.py  math.py  noise.py  operators.py  parameter.py  parameters.py  pbar.py  plotting.py  solver.py  spectra.py  state.py  transform.py  utilities.py  utils.py  variationer.py
src/scgenerator/_utils/: __init__.py  cache.py  legacy.py  parameter.py  pbar.py  utils.py  variationer.py
src/scgenerator/cli/: __main__.py  cli.py  new_config.py
src/scgenerator/data/: README.md  RamanTrace.dtf  Raman_gain.csv  default_params.json  gas.json  gas.toml  hr_t.npz  k_silica.txt  materials.toml  n_silica.txt  sellmeierRefractiveIndex.json  sellmeier_Börzsönyi.json  silica.json  silica.toml  start_head.sh  start_worker.sh  submit_job_template.txt
src/scgenerator/physics/: __init__.py  fiber.py  materials.py  plasma.py  properties.py  pulse.py  simulate.py  units.py
src/scgenerator/scripts/: __init__.py  slurm_submit.py
src/scgenerator/utils/: __init__.py  evaluator.py  parameter.py  utils.py  variationer.py
testing/: test_all_zeros.py  test_full_field.py  test_initialize.py  test_math.py  test_new_iterator.py  test_new_params.py  test_pulse.py  test_resonance.py  test_utils.py  test_variationer.py  test_vincetti.py
testing/configs/: Chang2011Fig2.toml
testing/configs/compute_init_parameters/: good.toml
testing/configs/count_variations/: 120sim_3vary.toml  1sim_0vary.toml  1sim_1vary.toml  2sim_0vary.toml  2sim_1vary.toml
testing/configs/custom_field/: init_field.npz  mean_power.toml  no_change.toml  peak_power.toml  recover1.toml  recover2.toml  wavelength_shift1.toml  wavelength_shift2.toml
testing/configs/ensure_consistency/: bad1.toml  bad2.toml  bad3.toml  bad4.toml  bad5.toml  bad6.toml  good1.toml  good2.toml  good3.toml  good4.toml  good5.toml  good6.toml
testing/configs/override/: fiber2.toml  initial_config.toml
testing/configs/param_sequence/: almost_equal.toml  equal.toml  no_variations.toml
testing/configs/run_simulations/: full_anomalous.toml
testing/configs/single_sim/: false1.toml  false2.toml  true1.toml
testing/configs/validate_types/: bad1.toml  bad2.toml  bad3.toml  bad4.toml  bad5.toml  bad6.toml  bad7.toml  good.toml
testing/long_tests/: test_recovery_param_seq.py
tests/: numpy.toml  param.json  param.toml  playground.py  test_Config.py  test_compute_init_parameters.py  test_config.json  test_config.toml  test_current_state.py  test_integrator.py  test_load_config.py  test_merge_data.py  test_run_simulations.py  test_save_config.py  test_save_config.toml  test_simulation_result.py  test_validate_types.py
tests/Optica_PM2000D/: Optica_PM2000D.toml  PM2000D_2 extrapolated 4 0.npz  test_Optica_PM2000D.py
tests/Travers/: Travers2019.py
