[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scgenerator"
version = "0.3.2"
description = "Simulate nonlinear pulse propagation in optical fibers"
readme = "README.md"
authors = [{ name = "Benoit Sierro", email = "benoit.sierro@iap.unibe.ch" }]
license = { file = "LICENS" }
classifiers = [
    "License :: OSI Approved :: MIT",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
keywords = ["nonlinear", "fiber optics", "simulation", "runge-kutta"]
dependencies = [
    "numpy >= 1.23",
    "scipy >= 1.9.0",
    "matplotlib >= 3.5.0",
    "tomli",
    "numba",
    "pydantic",
    "tqdm",
]

[tool.ruff]
line-length = 100
ignore = ["E741"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

