[metadata]
name = scgenerator
version = 0.0.1
description = Simulated PCFs and supercontinuum generation !
author = Benoit Sierro
author_email = benoit.sierro@iap.unibe.ch
long_description = file: README.md
long_description_content_type = text/markdown
keywords = supercontinuum, nonlinear optics, GNLSE
license = MIT
classifiers =
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir = 
    = src
install_requires =
    numpy
    matplotlib
    scipy
    ray
    send2trash
    toml


[options.package_data]
scgenerator =
    data/hr_t.npz
    data/default_params.json
    data/gas.json
    data/silica.json

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    scgenerator = scgenerator.cli.cli:main
    sc-submit = scgenerator.scripts.slurm_submit:main